samples/_failures_safe/1761410390_76a7d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cd20f32.c: In function ‘main’:
./samples/SAFE/__tmp_4cd20f32.c:153:5: error: ‘print_’ undeclared (first use in this function); did you mean ‘printf’?
  153 |     print_
      |     ^~~~~~
      |     printf
./samples/SAFE/__tmp_4cd20f32.c:153:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4cd20f32.c:153:11: error: expected ‘;’ at end of input
  153 |     print_
      |           ^
      |           ;
./samples/SAFE/__tmp_4cd20f32.c:153:5: error: expected declaration or statement at end of input
  153 |     print_
      |     ^~~~~~
